--- a/MyFirstC#Learning/MyFirstC#Learning.csproj
+++ b/MyFirstC#Learning/MyFirstC#Learning.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapePractice.cs" />
+    <Compile Include="SumOfNum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
